--- a/style.css
+++ b/style.css
@@ -46,14 +46,22 @@ main {
 }
 
 /* ELEMENTS STYLE */
-h1 {
+.heading {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 12rem;
+}
+.title {
   font-size: 4rem;
   text-align: center;
-  position: absolute;
+  padding-bottom: 1.8rem;
   width: 100%;
-  top: 52%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+}
+
+.between {
+  font-size: 1.4rem;
 }
 
 .number {
@@ -67,13 +75,6 @@ h1 {
   bottom: 0;
   left: 50%;
   transform: translate(-50%, 50%);
-}
-
-.between {
-  font-size: 1.4rem;
-  position: absolute;
-  top: 2rem;
-  right: 2rem;
 }
 
 .again {
